--- a/404.md
+++ b/404.md
@@ -7,5 +7,7 @@ footer: false
 
 # 404 - Page Not Found
 
-probably under Hijacking attack
+
+![image](https://informationsecurity.report/images/Resources/d31ffb8f-77ff-4fb3-9fba-49d1ab9ba413_WHATI.jpg)
+*probably under Hijacking attack*
 
