--- a/404.md
+++ b/404.md
@@ -2,12 +2,12 @@
 layout: default
 permalink: /404
 toc: false
-footer: false
+footer: true
 ---
 
 # 404 - Page Not Found
 
 
 ![image](https://informationsecurity.report/images/Resources/d31ffb8f-77ff-4fb3-9fba-49d1ab9ba413_WHATI.jpg)
-*probably under Hijacking attack*
+# probably under Hijacking attack
 
